--- a/MatchingGame/mainScene/Base.lproj/Main.storyboard
+++ b/MatchingGame/mainScene/Base.lproj/Main.storyboard
@@ -33,22 +33,110 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="2tH-GU-xu8">
+                                <rect key="frame" x="8" y="162.5" width="398" height="72"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gLI-9g-gxu">
+                                        <rect key="frame" x="0.0" y="0.0" width="199" height="72"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0Z-Qd-dFD">
+                                                <rect key="frame" x="0.0" y="0.0" width="199" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIN-rS-rei">
+                                                <rect key="frame" x="0.0" y="36" width="199" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3um-dx-UZt">
+                                        <rect key="frame" x="199" y="0.0" width="199" height="72"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Remaining" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vw5-AP-sXN">
+                                                <rect key="frame" x="0.0" y="0.0" width="199" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOE-HY-lG6">
+                                                <rect key="frame" x="0.0" y="36" width="199" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="OJf-oM-0eK">
+                                <rect key="frame" x="83" y="676" width="248" height="45"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ya3-Rr-hyq">
+                                        <rect key="frame" x="0.0" y="0.0" width="117.5" height="45"/>
+                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Settings" image="gearshape.fill" catalog="system">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="actionOpenSetting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A46-lK-5RT"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GLw-6v-4kI">
+                                        <rect key="frame" x="133.5" y="0.0" width="114.5" height="45"/>
+                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Restart" image="repeat" catalog="system">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="actionRestart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="in4-sF-wIk"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="xHR-SP-4zF"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="lDQ-A7-905" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1sF-Ei-Ce4"/>
                             <constraint firstAttribute="bottom" secondItem="lDQ-A7-905" secondAttribute="bottom" id="3nk-Na-mTx"/>
+                            <constraint firstItem="2tH-GU-xu8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="CPd-3m-m3m"/>
                             <constraint firstItem="1n7-qg-5Vm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NBN-VW-Am9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lDQ-A7-905" secondAttribute="trailing" id="Nt1-89-6lS"/>
+                            <constraint firstItem="OJf-oM-0eK" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.6" id="Pvl-0L-zu6"/>
+                            <constraint firstItem="2tH-GU-xu8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Qbh-UE-jEm"/>
                             <constraint firstItem="lDQ-A7-905" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Rem-OI-1R7"/>
+                            <constraint firstItem="OJf-oM-0eK" firstAttribute="centerX" secondItem="lDQ-A7-905" secondAttribute="centerX" id="TwE-c6-9d0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2tH-GU-xu8" secondAttribute="trailing" constant="8" id="fI8-Rb-Tr7"/>
+                            <constraint firstItem="1n7-qg-5Vm" firstAttribute="firstBaseline" secondItem="2tH-GU-xu8" secondAttribute="baseline" constant="19" symbolType="layoutAnchor" id="kYg-Pr-McH"/>
                             <constraint firstItem="1n7-qg-5Vm" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="oth-Q7-waC"/>
+                            <constraint firstItem="OJf-oM-0eK" firstAttribute="top" secondItem="1n7-qg-5Vm" secondAttribute="bottom" constant="16" id="slQ-Di-fgG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1n7-qg-5Vm" secondAttribute="trailing" id="uLZ-73-A0f"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KT6-3u-Jqv"/>
                     <connections>
                         <outlet property="collectionView" destination="1n7-qg-5Vm" id="b9O-hu-kgw"/>
+                        <outlet property="scoreLabel" destination="wIN-rS-rei" id="I9r-Xs-XLb"/>
+                        <outlet property="timeLabel" destination="UOE-HY-lG6" id="opf-LM-EBW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -73,8 +161,13 @@
     </scenes>
     <resources>
         <image name="appBackground" width="640" height="1002"/>
+        <image name="gearshape.fill" catalog="system" width="128" height="121"/>
+        <image name="repeat" catalog="system" width="128" height="99"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
